force-app/main/default/objects/Appeal__c/Appeal__c.object-meta.xml
<CustomObject>
    <description>This is used for a Request for Citation Appeal Hearing associated with a DIR BOFE Case.  This may be repurposed for specific purposes.</description>
    <label>Appeal</label>
    <nameField>
        <displayFormat>APL-{000000}</displayFormat>
        <label>Appeal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>