force-app/main/default/objects/Appeal__c/fields/Appeal_Case_Issues__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Case_Issues__c</fullName>
    <label>Appeal Case Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reverse</fullName>
            </value>
            <value>
                <fullName>Affirm</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>