force-app/main/default/objects/Appeal__c/fields/Appeal_Decision_Received__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Decision_Received__c</fullName>
    <label>Appeal Decision Received</label>
    <type>Date</type>
</CustomField>