force-app/main/default/objects/Appeal__c/fields/Appeal_Decision_Signed__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Decision_Signed__c</fullName>
    <label>Appeal Decision Signed</label>
    <type>Date</type>
</CustomField>