force-app/main/default/objects/Appeal__c/fields/Appeal_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Filed_Date__c</fullName>
    <label>Appeal Filed Date</label>
    <type>Date</type>
</CustomField>