force-app/main/default/objects/Appeal__c/fields/Appeal_Period_Expiration_RESP__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Period_Expiration_RESP__c</fullName>
    <label>Appeal Period Expiration – RESP</label>
    <type>Date</type>
</CustomField>