force-app/main/default/objects/Appeal__c/fields/Appeal_Request_Entity__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Request_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Entity (Person or Business) who requested this Appeal.</description>
    <inlineHelpText>The Entity (Person or Business) who requested this Appeal.</inlineHelpText>
    <label>Appeal Request Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appeals</relationshipLabel>
    <relationshipName>Appeals</relationshipName>
    <type>Lookup</type>
</CustomField>