force-app/main/default/objects/Appeal__c/fields/Appeal_Updated_Demand__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Updated_Demand__c</fullName>
    <label>Appeal Updated Demand</label>
    <type>TextArea</type>
</CustomField>