force-app/main/default/objects/Appeal__c/fields/Assigned_Deputy_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Email__c</fullName>
    <description>Assigned Deputy Email is updated with assigned deputy&#39;s email address from Internal Employee object. This field is to remain hidden from all layouts.</description>
    <label>Assigned Deputy Email</label>
    <type>Email</type>
</CustomField>