force-app/main/default/objects/Appeal__c/fields/Assigned_Senior_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Senior_Email__c</fullName>
    <label>Assigned Senior Email</label>
    <type>Email</type>
</CustomField>