force-app/main/default/objects/Appeal__c/fields/Citation_Number_Conga__c.field-meta.xml
<CustomField>
    <fullName>Citation_Number_Conga__c</fullName>
    <formula>( Case__r.Citation_Number__c )</formula>
    <label>Citation Number - Conga</label>
    <type>Text</type>
</CustomField>