force-app/main/default/objects/Appeal__c/fields/Citation_Selected__c.field-meta.xml
<CustomField>
    <fullName>Citation_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if a citation has been selected</description>
    <label>Citation Selected</label>
    <type>Checkbox</type>
</CustomField>