force-app/main/default/objects/Appeal__c/fields/Date_Updated_Demand__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated_Demand__c</fullName>
    <label>Date Updated Demand</label>
    <type>Date</type>
</CustomField>