force-app/main/default/objects/Appeal__c/fields/DIR_Appeal_Decision__c.field-meta.xml
<CustomField>
    <fullName>DIR_Appeal_Decision__c</fullName>
    <label>DIR Appeal Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affirmed</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Reversed &amp; Dismissed</fullName>
            </value>
            <value>
                <fullName>Reversed to Cause</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Untimely</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>