force-app/main/default/objects/Appeal__c/fields/Entity_Type_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_Descriptor__c</fullName>
    <label>Entity Type Descriptor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>an Individual</fullName>
            </value>
            <value>
                <fullName>a Corporation</fullName>
            </value>
            <value>
                <fullName>a California Corporation</fullName>
            </value>
            <value>
                <fullName>a Foreign Corporation</fullName>
            </value>
            <value>
                <fullName>a General Partnership</fullName>
            </value>
            <value>
                <fullName>a Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>a Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>a Limited Partnership</fullName>
            </value>
            <value>
                <fullName>a Registered Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>a Joint Venture</fullName>
            </value>
            <value>
                <fullName>an Unincorporated Association</fullName>
            </value>
            <value>
                <fullName>a Professional Corporation</fullName>
            </value>
            <value>
                <fullName>a Professional Law Corporation</fullName>
            </value>
            <value>
                <fullName>a Political Subdivision of the State of California</fullName>
            </value>
            <value>
                <fullName>a Trust</fullName>
            </value>
            <value>
                <fullName>a Business Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>