force-app/main/default/objects/Appeal__c/fields/Estimated_Length_of_Hearing_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Length_of_Hearing_In_Minutes__c</fullName>
    <inlineHelpText>The estimate length of this hearing in minutes.  i.e. 60 minutes for 1 hour, or 90 minutes for 1 hour 30 minutes.</inlineHelpText>
    <label>Estimated Length of Hearing (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>