force-app/main/default/objects/Appeal__c/fields/Hearing_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Date_and_Time__c</fullName>
    <label>Hearing Date and Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>