force-app/main/default/objects/Appeal__c/fields/Hearing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hearing Officer</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Appeals</relationshipLabel>
    <relationshipName>Appeals</relationshipName>
    <type>Lookup</type>
</CustomField>