force-app/main/default/objects/Appeal__c/fields/Hearing_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Officer_Email__c</fullName>
    <description>Hearing Officer&#39;s email from CM updates this field. The email is for withdrawn appeal notification</description>
    <label>Hearing Officer Email</label>
    <type>Email</type>
</CustomField>