force-app/main/default/objects/Appeal__c/fields/Hearing_Officer_Senior_Email__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Officer_Senior_Email__c</fullName>
    <label>Hearing Officer Senior Email</label>
    <type>Email</type>
</CustomField>