force-app/main/default/objects/Appeal__c/fields/Overdue_Date__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Date__c</fullName>
    <description>Date to update every 30 days from request date until hearing is set</description>
    <label>Overdue Date</label>
    <type>Date</type>
</CustomField>