force-app/main/default/objects/Appeal__c/fields/Parties_Notified_of_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Parties_Notified_of_Appeal__c</fullName>
    <label>Parties Notified of Appeal</label>
    <type>Date</type>
</CustomField>