force-app/main/default/objects/Appeal__c/fields/Scheduled_Hearing_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hearing_Date_and_Time__c</fullName>
    <description>The Scheduled Date and Time of the Hearing when the hearing was created</description>
    <inlineHelpText>The Scheduled Date and Time of the Hearing when the hearing was created</inlineHelpText>
    <label>Scheduled Hearing Date and Time</label>
    <type>DateTime</type>
</CustomField>