force-app/main/default/objects/Appeal__c/fields/Senior_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Senior_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Deputy</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Appeals (Senior Deputy)</relationshipLabel>
    <relationshipName>Appeals1</relationshipName>
    <type>Lookup</type>
</CustomField>