force-app/main/default/objects/Appeal__c/fields/State_Case_Number_Conga__c.field-meta.xml
<CustomField>
    <fullName>State_Case_Number_Conga__c</fullName>
    <formula>( Case__r.Case_Number__c )</formula>
    <label>State Case Number - Conga</label>
    <type>Text</type>
</CustomField>