force-app/main/default/objects/Appeal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received - Timely</fullName>
                <default>true</default>
                <label>Received - Timely</label>
            </value>
            <value>
                <fullName>Received - Untimely</fullName>
            </value>
            <value>
                <fullName>Sent to Calendar Clerk</fullName>
            </value>
            <value>
                <fullName>Hearing Scheduled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Accepted Representation</fullName>
            </value>
            <value>
                <fullName>Trial Pending</fullName>
            </value>
            <value>
                <fullName>Court Decision</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Affirmed</fullName>
            </value>
            <value>
                <fullName>Modified - Affirmed</fullName>
            </value>
            <value>
                <fullName>Remanded for Investigation</fullName>
            </value>
            <value>
                <fullName>Reversed and Dismissed</fullName>
            </value>
            <value>
                <fullName>Reversed to Cause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>