force-app/main/default/objects/Appeal__c/fields/Translator_Requested_Language__c.field-meta.xml
<CustomField>
    <fullName>Translator_Requested_Language__c</fullName>
    <inlineHelpText>I am also requesting a translator in the following language</inlineHelpText>
    <label>Translator Requested Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>