force-app/main/default/objects/Appeal__c/fields/Type_of_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Appeal__c</fullName>
    <label>Type of Appeal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Determination</fullName>
            </value>
            <value>
                <fullName>Citation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>