force-app/main/default/objects/Appeal__c/fields/Unavailable_dates__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_dates__c</fullName>
    <label>Unavailable dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>