force-app/main/default/objects/Appeal__c/fields/Waive_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Waive_Time_Limit__c</fullName>
    <inlineHelpText>I understand that I have the right to have an appeal hearing within thirty days (within five days
when appealing a Stop Order and within ten days when appealing a Garment Confiscation).</inlineHelpText>
    <label>Waive Time Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>