force-app/main/default/objects/Appeal__c/fields/X2810_3_Case__c.field-meta.xml
<CustomField>
    <fullName>X2810_3_Case__c</fullName>
    <label>2810.3 Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>