force-app/main/default/objects/Appeal__c/recordTypes/BOFE.recordType-meta.xml
<RecordType>
    <fullName>BOFE</fullName>
    <active>true</active>
    <description>Used for BOFE Appeals</description>
    <label>BOFE</label>
</RecordType>