force-app/main/default/objects/Appeal__c/validationRules/Case_type_needs_to_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_type_needs_to_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW() &amp;&amp;(RecordType.DeveloperName == &#39;BOFE&#39;) &amp;&amp;(ISPICKVAL( X2810_3_Case__c,&#39;&#39; )),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>&#39;2810.3 Case&#39; field pick list value has to be selected!</errorMessage>
</ValidationRule>