force-app/main/default/objects/Appeal__c/validationRules/citation_needs_to_be_selected_for_appeal.validationRule-meta.xml
<ValidationRule>
    <fullName>citation_needs_to_be_selected_for_appeal</fullName>
    <active>true</active>
    <description>BOFE deputy must select at least one citation for appeal</description>
    <errorConditionFormula>IF(ISNEW()&amp;&amp;(RecordType.DeveloperName == &#39;BOFE&#39; || RecordType.DeveloperName == &#39;RCI&#39;) &amp;&amp; (Citation_Selected__c=false), true,false)</errorConditionFormula>
    <errorMessage>Please select at least one citation to be appealed!</errorMessage>
</ValidationRule>